# zephyr_modules_mik32

./: CMakeLists.txt  Kconfig  README.md
drivers/: CMakeLists.txt  Kconfig
drivers/clock_control/: CMakeLists.txt  Kconfig  Kconfig.mikron  clock_control_mik32.c
drivers/eeprom/: CMakeLists.txt  Kconfig  eeprom_mikron_8k_blk.c
drivers/gpio/: CMakeLists.txt  Kconfig  Kconfig.mikron  gpio_mik32.c
drivers/i2c/: CMakeLists.txt  Kconfig  Kconfig.mikron  i2c_mik32.c  i2c_mik32.h
drivers/interrupt_controller/: CMakeLists.txt  Kconfig  Kconfig.mikron  intc_mik32_epic.c  intc_mik32_gpio_irq.c
drivers/memc/: CMakeLists.txt  Kconfig.mikron  memc_mikron_spifi.c
drivers/pinctrl/: CMakeLists.txt  Kconfig  Kconfig.mikron  pinctrl_mik32_af.c
drivers/serial/: CMakeLists.txt  Kconfig  Kconfig.mikron  mik32_uart.h  usart_mik32.c
drivers/spi/: CMakeLists.txt  Kconfig  Kconfig.mikron  spi_mik32.c  spi_mik32.h
drivers/timer/: CMakeLists.txt  Kconfig  Kconfig.riscv_scr1_machine  mikron_mik32_timer32.c  riscv_scr1_machine_timer.c
dts/bindings/: vendor-prefixes.txt
dts/bindings/cache/: syntacore,cache.yaml
dts/bindings/clock/: mikron,mik32-pmgr.yaml
dts/bindings/cpu/: syntacore,scr1.yaml
dts/bindings/gpio/: mikron,mik32-gpio.yaml
dts/bindings/i2c/: mikron,mik32-i2c.yaml
dts/bindings/interrupt-controller/: mikron,epic.yaml  mikron,mik32-gpio-irq.yaml  riscv,scr-ipic.yaml
dts/bindings/memory-controllers/: mikron,spifi.yaml
dts/bindings/mtd/: mikron,eeprom-8k-blk.yaml
hal/: CMakeLists.txt
soc/: CMakeLists.txt
soc/mikron/: CMakeLists.txt
zephyr/: module.yml
(+32 files in other folders)
